--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 node_modules
-uploads
 /node_modules
 /.pnp
 .pnp.js
@@ -14,6 +13,7 @@ uploads
 /build
 
 # misc
+*.code-workspace
 .DS_Store
 .env
 .env.local
@@ -24,3 +24,7 @@ uploads
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+uploads/*
+!uploads/.gitkeep
+!uploads/resized/.gitkeep
